--- a/index.css
+++ b/index.css
@@ -1,18 +1,20 @@
 body{
     margin: 0;
+    box-sizing: border-box;
 }
-img{
-    height: 60px;
-}
+
 .logo{
     padding: 0 50px;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
+.logo img{
+    height: 60px;
+}
 
 header{
-    background-color: black;
+    background-color: indigo;
     color: white;
 }
 nav{
@@ -25,29 +27,119 @@ nav{
     align-items: center;
     display: flex;
     justify-content: flex-end;
-    flex-direction: row;
-    
+    flex-direction: row;  
 }
+.menu a{
+    text-decoration: none;
+    color: white;
+}
+
 .menu li{
-    padding: 0 20px;
+    padding: 10px 20px;
     list-style-type: none;
     border-radius: 20px;
 }
 .menu li:hover{
-    background-color: purple;
+    background-color: black;
+
 }
-.jumbo{
-    background-color: blue;
-}
-.additional{
-    color: white;
-    background-color: red;
-}
-footer{
+main{
     background-color: black;
     color: white;
 }
-@media screen and (max-width:550px){
+.jumbo{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.form{
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: black;
+}
+.form h1{
+    font-size: 40px;
+    margin-left: 50px;
+    margin-right: 50px;
+}
+.form p{
+    font-size: 20px;
+    margin: 0 50px;
+}
+.form input{
+    background-color: rgb(17, 17, 17);
+    padding-left: 10px;
+    color: white;
+    margin: 25px auto 25px auto;
+    width: 80%;
+    height: 40px;
+    border: 3px solid indigo;
+    border-radius: 15px;
+    font-size: 25px;
+    font-weight: bold;
+}
+.form input:focus {
+    outline-width: 0;
+}
+.form button{
+    margin: auto;
+    width: 82%;
+    height: 45px;
+    border-radius: 15px;
+    border: 3px solid indigo;
+    background-color: indigo;
+    color: white;
+    font-size: 25px;
+    font-weight: bold;
+    cursor:pointer;
+}
+.form button:hover{
+    border: 1px solid white;
+}
+.imgjumbo{
+    max-width: 50%;
+}
+.imgjumbo img{
+ object-fit: cover;
+}    
+
+.additional{
+    border-top: 20px solid indigo;
+    color: white;
+    background-color: black;
+}
+footer{
+    background-color: indigo;
+    color: white;
+    display: flex;
+}
+footer img{
+    height: 50px;
+    vertical-align:middle;
+}
+footer ul {
+    list-style-type: none;
+    align-items: center;
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+footer ul li{
+    list-style-type: none;
+    padding: 10px;
+}
+footer a{
+    color: white;
+    text-decoration: none;
+    vertical-align: middle;
+}
+
+
+
+@media screen and (max-width:800px){
     .menu{
         display: block;
         text-align: center;
@@ -63,6 +155,16 @@ footer{
         padding: 0 50px;
         display: flex;
         justify-content: center;
+    }
+    .jumbo{
+        display: block;
+    }
+    footer{
+        display: block;
+    }
+    footer ul{
+        display: block;
+        text-align: center;
     }
 
 
