--- a/index.css
+++ b/index.css
@@ -9,8 +9,14 @@ body{
     align-items: center;
     justify-content: space-between;
 }
+.logo a{
+    color: white;
+    text-decoration: none;
+    vertical-align: middle;
+}
 .logo img{
     height: 60px;
+    vertical-align: middle;
 }
 
 header{
@@ -49,15 +55,28 @@ main{
 }
 .jumbo{
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    flex:1;
 }
 .form{
-    text-align: center;
+    margin: 30px auto 30px auto;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     background-color: black;
+    justify-content: space-evenly;
+}
+.form a{
+    margin: 20px auto 20px auto;
+    text-align: center;
+    text-decoration: none;
+    width: 50%;
+    height: 35px;
+    border-radius: 15px;
+    border: 3px solid indigo;
+    background-color: orangered;
+    color: white;
+    font-size: 27px;
+    font-weight: bold;
+    cursor:pointer;
 }
 .form h1{
     font-size: 40px;
@@ -72,7 +91,7 @@ main{
     background-color: rgb(17, 17, 17);
     padding-left: 10px;
     color: white;
-    margin: 25px auto 25px auto;
+    margin: 0 auto 0 auto;
     width: 80%;
     height: 40px;
     border: 3px solid indigo;
@@ -84,18 +103,18 @@ main{
     outline-width: 0;
 }
 .form button{
-    margin: auto;
+    margin: 20px auto 20px auto;
     width: 82%;
     height: 45px;
     border-radius: 15px;
     border: 3px solid indigo;
-    background-color: indigo;
+    background-color: orangered;
     color: white;
     font-size: 25px;
     font-weight: bold;
     cursor:pointer;
 }
-.form button:hover{
+.form button:hover,.form a:hover{
     border: 1px solid white;
 }
 .imgjumbo{
@@ -106,9 +125,16 @@ main{
 }    
 
 .additional{
-    border-top: 20px solid indigo;
+    border-top: 10px solid indigo;
     color: white;
     background-color: black;
+    display: flex;
+    justify-content: space-around;
+    flex: 1;
+}
+.additional img{
+    height: 400px;
+    
 }
 footer{
     background-color: indigo;
@@ -135,6 +161,11 @@ footer a{
     color: white;
     text-decoration: none;
     vertical-align: middle;
+}
+.redes{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 
@@ -163,6 +194,10 @@ footer a{
         display: block;
     }
     footer ul{
+        display: block;
+        text-align: center;
+    }
+    .additional{
         display: block;
         text-align: center;
     }
