--- a/index.css
+++ b/index.css
@@ -51,6 +51,7 @@ nav{
 main{
     background-color: black;
     color: white;
+    max-width: 100%;
 }
 .jumbo{
     display: flex;
@@ -120,7 +121,7 @@ main{
     max-width: 50%;
 }
 .imgjumbo img{
- object-fit: cover;
+object-fit: cover;
 }    
 
 .additional{
